Corrected all exceptions; Oauth2 authentication rework; Loaded application font upon startup; Added caching for ethereum wallet files loading; Added special UI windows to display specialized notification or alert windows; Corresponding UI fixes and code improvement